--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ body {
 }
 
 .CalcButtonClear:hover {
-  background: #c0392b;
+  background: #db7902;
   transform: scale(1.1);
 }
 
@@ -81,7 +81,7 @@ body {
 }
 
 .MySurnameButton {
-  background: #27ae60;
+  background: #1b2269;
   color: white;
   border-radius: 50%;
   padding: 20px;
